dev : create file : robot.txt

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+  <meta name="description" content="La maison de santé pluridisciplinaire d'Epernon ou MSP accueille dix professionnels de santé  : 4 médecins généraliste, ,  2 chirurgiens dentiste, 1  diététicienne nutritionniste, 1 ergothérapheute, 1  masseur-kinésithérapeute et 1 pédicure-podologue">
   <title>MSP VAL DROUETTE</title>
   <link rel="shortcut icon" type="image/x-icon" href="./images/favicon.ico" />
 </head>
 <body>
-  git 
+
 </body>
 </html>
