--- a/index.html
+++ b/index.html
@@ -5,10 +5,125 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="La maison de santé pluridisciplinaire d'Epernon ou MSP accueille dix professionnels de santé  : 4 médecins généraliste, ,  2 chirurgiens dentiste, 1  diététicienne nutritionniste, 1 ergothérapheute, 1  masseur-kinésithérapeute et 1 pédicure-podologue">
+  <link rel="stylesheet" href="./bootstrap.min.css">
+  <link rel="stylesheet" href="style.css">
   <title>MSP VAL DROUETTE</title>
   <link rel="shortcut icon" type="image/x-icon" href="./images/favicon.ico" />
 </head>
-<body>
 
+<body class="container-lg">
+  <header">   
+    <div class="background-title">
+      <h1>MAISON DE SANTE VAL DROUETTE</h1>
+    </div>
+    <div class="bandeau">
+      <img class= "logo" src="./images/imothep2.png" alt="imhotep">
+      <img class="bandeau-picture" src="./images/2000004458971.jpg" alt="maison de santé">
+    </div>
+    <div aria-label="breadcrumb">
+        <ol class="breadcrumb p5">
+            <li class="breadcrumb-item active" aria-current="page">Accueil</a>
+        </ol>
+      </div>
+    <nav class="container">
+      <div class="row justify-content-around p-3">
+          <a  class="col-12 col-md-3 btn btn-primary btn-sm disabled ">Accueil</a>
+          <a  class="col-12 col-md-3 btn btn-danger btn-sm" href="listeProfessionnels.html">Les professionnels</a>
+          <a class="col-12 col-md-3 btn btn-success btn-sm ">Actualités</a>
+      </div>
+    </nav>
+  </header>
+
+
+  <section>
+    <h2>Présentation de la Maison de santé pluridisciplinaire </h2>
+    <p>La maison de santé pluridisciplinaire d'Epernon s'est construite a proximité de la gare pour en faciliter l'accès. 
+      Elle accueille dix professionnels de santé  : 4 médecins généraliste, ,  2 chirurgiens dentiste, 1  diététicienne nutritionniste, 1 ergothérapheute, 1  masseur-kinésithérapeute et 1 pédicure-podologue. 
+      Un parking réservé à la patientèle de la maison de santé se situe à proximité. 
+      Les professionnels sont regroupés au sein d'une SISA (société interprofessionnelle de soins ambulatoires) dont le but et d'améliorer la prise en charge des patients dans un processus pluridisciplinaire…   
+      </p>
+    <p>La structure multipraticiens a une surface de 1.000 m² reparties sur deux étages. Il abrite un pôle médical et dentaire de huit salles. Un pôle paramédical accueille les professionnels n'étant pas  "professionnels de santé" au regard des textes.
+      </p>
+      <p>Le coût total de la construction s’élève à 3,2 millions d’euros hors taxes. le financement a été pris en charge par la ville d'Epernon,la communauté de communes des Portes Euréliennes d’Ile-de-France , le département , la Région, et de l’État.</p>
+  </section>
+  
+  <section>
+      <h2>Galerie photos</h2>
+      <!--  caroussel photo bootstrap-->
+      <div id="carouselExampleIndicators" class="carousel slide  mx-auto" data-ride="carousel">
+        <div class="carousel-inner  mx-auto">
+          <div class="carousel-item active">
+            <img class="d-block caroussel" src="./images/Image01.jpg" alt="First slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block caroussel" src="./images/Image02.jpg" alt="Second slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block caroussel" src="./images/Image03.jpg" alt="Third slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block caroussel" src="./images/Image04.jpg" alt="4 slide">
+          </div>        
+          <div class="carousel-item">
+            <img class="d-block caroussel" src="./images/Image05.jpg" alt="5 slide">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev"><span class="sr-only"> <img src="./images/arrow-left.svg" alt="arrow right"></span></span></a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next"><span class="sr-only"><img src="./images/arrow-right.svg" alt="arrow right"></span>
+        </a>
+      </div>
+    </section>
+
+    <section>
+      <h2>Informations complementaires</h2>
+      <div class="row justify-content-around p-3">
+        <div class="card col-11 col-md-5">
+          <div class="card-body">
+            <h5 class="card-title">Plan d'access</h5>
+            <iframe style="height: 90%; width: 90%;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1591.518382572211!2d1.681235502622506!3d48.6054358767477!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e418e73b9f8ff3%3A0x291251e17fbe465f!2s9%20Rue%20de%20la%20Gare%2C%2028230%20Droue-sur-Drouette!5e0!3m2!1sfr!2sfr!4v1622212865383!5m2!1sfr!2sfr" width="250" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+          </div>
+        </div>
+        <div c class="card col-11 col-md-3">
+          <div class="card-body"> 
+            <a href="listeProfessionnels.html"  class="btn btn-danger btn-sm">Prendre rendez-vous  
+            <img  style="height:15px; padding:2px;" src="./images/epingle.svg" alt="epingle"></a>
+            <p class="address">
+               Maison de santé<br />9 rue de la gare <br />28230 EPERNON
+            </p>
+          </div>
+        </div>
+        <div c class="card col-11 col-md-3">
+          <div class="card-body">
+            <h5 class="card-title">Liens utiles</h5>
+            <ul>
+              <li><a target="_blank" href="https://www.ameli.fr/assure/adresses-et-contact/points-accueil/agence-de-chartres">CPAM Chartres</li></a>
+              <li><a target="_blank" href="https://www.ville-epernon.fr/">Ville d Epernon</li></a>
+              <li><a target="_blank" href="https://www.centre-val-de-loire.ars.sante.fr/">ARS Val de Loir</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+  <footer class="background-footer">
+     <h3>MAISON DE SANTE PLURIDISCIPLINAIRE  VAL DROUETTE</h3>
+    <DIV CLASS= "row justify-content-around">
+      <div class="col-3"></div>
+      <a class="logo-social col-2" href="#"><img  src="./images/Icon-instagram.svg" alt="logo instagram"></a>
+      <a class="logo-social col-2" href="#"><img src="./images/Icon-facebook.svg" alt="logo facebook"></a>
+      <a class="logo-social col-2" href="#"><img src="./images/Icontwitter.svg" alt="logo twitter"></a>
+      <div class="col-3"></div>
+    </div>
+
+  </footer>
+
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
 </body>
 </html>
