--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body class="container-lg">
-  <header">   
+  <header>   
     <div class="background-title">
       <h1>MAISON DE SANTE VAL DROUETTE</h1>
     </div>
@@ -51,8 +51,8 @@
       <h2>Galerie photos</h2>
       <!--  caroussel photo bootstrap-->
       <div id="carouselExampleIndicators" class="carousel slide  mx-auto" data-ride="carousel">
-        <div class="carousel-inner  mx-auto">
-          <div class="carousel-item active">
+        <div class="carousel-inner">
+          <div class="carousel-item active center">
             <img class="d-block caroussel" src="./images/Image01.jpg" alt="First slide">
           </div>
           <div class="carousel-item">
@@ -80,7 +80,7 @@
         <div class="card col-11 col-md-5">
           <div class="card-body">
             <h5 class="card-title">Plan d'access</h5>
-            <iframe style="height: 90%; width: 90%;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1591.518382572211!2d1.681235502622506!3d48.6054358767477!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e418e73b9f8ff3%3A0x291251e17fbe465f!2s9%20Rue%20de%20la%20Gare%2C%2028230%20Droue-sur-Drouette!5e0!3m2!1sfr!2sfr!4v1622212865383!5m2!1sfr!2sfr" width="250" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            <iframe style="height: 85%; width: 100%; border-radius: 15px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1591.518382572211!2d1.681235502622506!3d48.6054358767477!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e418e73b9f8ff3%3A0x291251e17fbe465f!2s9%20Rue%20de%20la%20Gare%2C%2028230%20Droue-sur-Drouette!5e0!3m2!1sfr!2sfr!4v1622212865383!5m2!1sfr!2sfr" width="250" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
           </div>
         </div>
         <div c class="card col-11 col-md-3">
