--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <div aria-label="breadcrumb">
         <ol class="breadcrumb p5">
-            <li class="breadcrumb-item active" aria-current="page">Accueil</a>
+            <li class="breadcrumb-item active" aria-current="page">Accueil</li>
         </ol>
       </div>
     <nav class="container">
@@ -68,9 +68,11 @@
             <img class="d-block caroussel" src="./images/Image05.jpg" alt="5 slide">
           </div>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev"><span class="sr-only"> <img src="./images/arrow-left.svg" alt="arrow right"></span></span></a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next"><span class="sr-only"><img src="./images/arrow-right.svg" alt="arrow right"></span>
-        </a>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev"><span class="sr-only">
+          <img src="./images/arrow-left.svg" alt="arrow right"></span></a>
+
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next"><span class="sr-only">
+          <img src="./images/arrow-right.svg" alt="arrow right"></span></a>
       </div>
     </section>
 
@@ -83,21 +85,21 @@
             <iframe style="height: 85%; width: 100%; border-radius: 15px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1591.518382572211!2d1.681235502622506!3d48.6054358767477!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e418e73b9f8ff3%3A0x291251e17fbe465f!2s9%20Rue%20de%20la%20Gare%2C%2028230%20Droue-sur-Drouette!5e0!3m2!1sfr!2sfr!4v1622212865383!5m2!1sfr!2sfr" width="250" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
           </div>
         </div>
-        <div c class="card col-11 col-md-3">
+        <div class="card col-11 col-md-3">
           <div class="card-body"> 
-            <a href="listeProfessionnels.html"  class="btn btn-danger btn-sm">Prendre rendez-vous  
+            <a href="listeProfessionnels.html" class="btn btn-danger btn-sm">Prendre rendez-vous  
             <img  style="height:15px; padding:2px;" src="./images/epingle.svg" alt="epingle"></a>
             <p class="address">
                Maison de santé<br />9 rue de la gare <br />28230 EPERNON
             </p>
           </div>
         </div>
-        <div c class="card col-11 col-md-3">
+        <div class="card col-11 col-md-3">
           <div class="card-body">
             <h5 class="card-title">Liens utiles</h5>
             <ul>
-              <li><a target="_blank" href="https://www.ameli.fr/assure/adresses-et-contact/points-accueil/agence-de-chartres">CPAM Chartres</li></a>
-              <li><a target="_blank" href="https://www.ville-epernon.fr/">Ville d Epernon</li></a>
+              <li><a target="_blank" href="https://www.ameli.fr/assure/adresses-et-contact/points-accueil/agence-de-chartres">CPAM Chartres</a></li>
+              <li><a target="_blank" href="https://www.ville-epernon.fr/">Ville d Epernon</a></li>
               <li><a target="_blank" href="https://www.centre-val-de-loire.ars.sante.fr/">ARS Val de Loir</a></li>
             </ul>
           </div>
