--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
       <img class="bandeau-picture" src="./images/2000004458971.jpg" alt="maison de santé">
     </div>
     <div aria-label="breadcrumb">
-        <ol class="breadcrumb p5">
-            <li class="breadcrumb-item active" aria-current="page">Accueil</li>
-        </ol>
-      </div>
+      <ol class="breadcrumb p5">
+        <li class="breadcrumb-item active" aria-current="page">Accueil</li>
+      </ol>
+    </div>
     <nav class="container">
       <div class="row justify-content-around p-3">
           <a  class="col-12 col-md-3 btn btn-primary btn-sm disabled ">Accueil</a>
@@ -82,7 +82,9 @@
         <div class="card col-11 col-md-5">
           <div class="card-body">
             <h5 class="card-title">Plan d'access</h5>
-            <iframe style="height: 85%; width: 100%; border-radius: 15px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1591.518382572211!2d1.681235502622506!3d48.6054358767477!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e418e73b9f8ff3%3A0x291251e17fbe465f!2s9%20Rue%20de%20la%20Gare%2C%2028230%20Droue-sur-Drouette!5e0!3m2!1sfr!2sfr!4v1622212865383!5m2!1sfr!2sfr" width="250" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            <iframe style="height: 85%; width: 100%; border-radius: 15px; border:0;"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1591.518382572211!2d1.681235502622506!3d48.6054358767477!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e418e73b9f8ff3%3A0x291251e17fbe465f!2s9%20Rue%20de%20la%20Gare%2C%2028230%20Droue-sur-Drouette!5e0!3m2!1sfr!2sfr!4v1622212865383!5m2!1sfr!2sfr" 
+                    allowfullscreen="" loading="lazy"></iframe>
           </div>
         </div>
         <div class="card col-11 col-md-3">
