Dev : Created actualite.html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="row justify-content-around p-3">
           <a  class="col-12 col-md-3 btn btn-primary btn-sm disabled ">Accueil</a>
           <a  class="col-12 col-md-3 btn btn-danger btn-sm" href="listeProfessionnels.html">Les professionnels</a>
-          <a class="col-12 col-md-3 btn btn-success btn-sm ">Actualités</a>
+          <a class="col-12 col-md-3 btn btn-success btn-sm" href="actualites.html">Actualités</a>
       </div>
     </nav>
   </header>
@@ -52,20 +52,30 @@
       <!--  caroussel photo bootstrap-->
       <div id="carouselExampleIndicators" class="carousel slide  mx-auto" data-ride="carousel">
         <div class="carousel-inner">
-          <div class="carousel-item active center">
-            <img class="d-block caroussel" src="./images/Image01.jpg" alt="First slide">
+          <div class="carousel-item active">
+            <div class="d-flex justify-content-center w-100 h-100">
+              <img class="d-block caroussel" src="./images/Image01.jpg" alt="First slide">
+          </div>
+        </div>
+          <div class="carousel-item">
+            <div class="d-flex justify-content-center w-100 h-100">
+              <img class="d-block caroussel" src="./images/Image02.jpg" alt="Second slide">
+          </div>
+        </div>
+          <div class="carousel-item">
+            <div class="d-flex justify-content-center w-100 h-100">
+              <img class="d-block caroussel" src="./images/Image03.jpg" alt="Third slide">
+            </div>
           </div>
           <div class="carousel-item">
-            <img class="d-block caroussel" src="./images/Image02.jpg" alt="Second slide">
-          </div>
+            <div class="d-flex justify-content-center w-100 h-100">
+              <img class="d-block caroussel" src="./images/Image04.jpg" alt="4 slide">
+            </div> 
+          </div>       
           <div class="carousel-item">
-            <img class="d-block caroussel" src="./images/Image03.jpg" alt="Third slide">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block caroussel" src="./images/Image04.jpg" alt="4 slide">
-          </div>        
-          <div class="carousel-item">
-            <img class="d-block caroussel" src="./images/Image05.jpg" alt="5 slide">
+            <div class="d-flex justify-content-center w-100 h-100">
+              <img class="d-block caroussel" src="./images/Image05.jpg" alt="5 slide">
+            </div>
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev"><span class="sr-only">
