--- a/listeProfessionnels.html
+++ b/listeProfessionnels.html
@@ -30,7 +30,7 @@
         <div class="row justify-content-around p-3">
             <a  class="col-12 col-md-3 btn btn-primary btn-sm"  href="index.html">Accueil</a>
             <a  class="col-12 col-md-3 btn btn-danger btn-sm disabled" href="listeProfessionnels.html">Les professionnels</a>
-            <a class="col-12 col-md-3 btn btn-success btn-sm ">Actualités</a>
+            <a class="col-12 col-md-3 btn btn-success btn-sm" href="actualites.html">Actualités</a>
         </div>
       </nav>
   </header>
