dev : animation bton and logo

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <h1>MAISON DE SANTE VAL DROUETTE</h1>
     </div>
     <div class="bandeau">
-      <img class= "logo" src="./images/imothep2.png" alt="imhotep">
+      <img class= "logo btn-left" src="./images/imothep2.png" alt="imhotep">
       <img class="bandeau-picture" src="./images/2000004458971.jpg" alt="maison de santé">
     </div>
     <div aria-label="breadcrumb">
@@ -29,9 +29,9 @@
     </div>
     <nav class="container">
       <div class="row justify-content-around p-3">
-          <a  class="col-12 col-md-3 btn btn-primary btn-sm disabled ">Accueil</a>
+          <a  class="col-12 col-md-3 btn btn-primary btn-sm btn-left disabled ">Accueil</a>
           <a  class="col-12 col-md-3 btn btn-danger btn-sm" href="listeProfessionnels.html">Les professionnels</a>
-          <a class="col-12 col-md-3 btn btn-success btn-sm" href="actualites.html">Actualités</a>
+          <a class="col-12 col-md-3 btn btn-success btn-sm btn-right " href="actualites.html">Actualités</a>
       </div>
     </nav>
   </header>
