dev: ajout balise OG dans index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
   <meta name="description" content="La maison de santé pluridisciplinaire d'Epernon ou MSP accueille dix professionnels de santé  : 4 médecins généraliste, ,  2 chirurgiens dentiste, 1  diététicienne nutritionniste, 1 ergothérapheute, 1  masseur-kinésithérapeute et 1 pédicure-podologue">
   <meta name="keywords" content="mot-clé 1, mot-clé 2, mot-clé 3"/>
   <meta name="author" content="jp Ledos" />
+
+   // balise meta OG pour partage du site sur reseau sociaux
+  <meta property="og:title" content="MSP VAL DROUETTE" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://jpledos.github.io/msp/" />
+  <meta property="og:image" content="https://jpledos.github.io/msp/images/2000004458971.jpg" />
+  <meta property=”og:description” content=”decouvrez le site de la nouvelle maison de santé” />
+
+
   <link rel="stylesheet" href="./bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
   <title>MSP VAL DROUETTE</title>
