Fix : modify comments in indesx.html

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <meta name="keywords" content="mot-clé 1, mot-clé 2, mot-clé 3"/>
   <meta name="author" content="jp Ledos" />
 
-   // balise meta OG pour partage du site sur reseau sociaux
+   <!--  balise meta OG pour partage du site sur reseau sociaux git  -->
   <meta property="og:title" content="MSP VAL DROUETTE" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://jpledos.github.io/msp/" />
   <meta property="og:image" content="https://jpledos.github.io/msp/images/2000004458971.jpg" />
-  <meta property=”og:description” content=”decouvrez le site de la nouvelle maison de santé” />
+  <meta property="og:description" content="decouvrez le site de la nouvelle maison de santé" />
 
 
   <link rel="stylesheet" href="./bootstrap.min.css">
@@ -131,7 +131,7 @@
     </section>
   <footer class="background-footer">
      <h3>MAISON DE SANTE PLURIDISCIPLINAIRE  VAL DROUETTE</h3>
-    <DIV CLASS= "row justify-content-around">
+    <div class= "row justify-content-around">
       <div class="col-3"></div>
       <a class="logo-social col-2" href="#"><img  src="./images/Icon-instagram.svg" alt="logo instagram"></a>
       <a class="logo-social col-2" href="#"><img src="./images/Icon-facebook.svg" alt="logo facebook"></a>
