dev : add bandeau_og.png for social

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta property="og:title" content="MSP VAL DROUETTE" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://jpledos.github.io/msp/" />
-  <meta property="og:image" content="https://jpledos.github.io/msp/images/2000004458971.jpg" />
+  <meta property="og:image" content="https://jpledos.github.io/msp/images/bandeau_og.png" />
   <meta property="og:description" content="decouvrez le site de la nouvelle maison de santé" />
 
 
